--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,12 @@
 
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/app.js"></script>
+  <!-- <script defer src="scripts/create_form"></script> -->
 </head>
+
+<main id="main-content">
+</main>
+
 
 <body>
   <h1>Have fun! 🥔</h1>
