Add action to ejs form

--- a/views/story_create.ejs
+++ b/views/story_create.ejs
@@ -21,8 +21,8 @@
 <body>
   <h1>Create your story!🥔</h1>
   <p id="oldentry">Previous entry here</p>
-  <!-- action="/create/read" method="post" -->
-  <form name="writingform"> 
+  <!--  -->
+  <form name="writingform" action="/create/read" method="post"> 
     <input type="text" name="title" placeholder=" Title here ">
     <textarea  name="story" placeholder="Write your story here"></textarea>
     <button>Create!</button>
