--- a/styles/users.scss
+++ b/styles/users.scss
@@ -1,8 +1,24 @@
 body {
+  .each-story {
+    margin: 1em;
+    border-style: solid;
+    padding: 1em;
+    h1 {
+      margin-top: 0;
+    }
+  }
+  .container-fluid {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  #navbarSupportedContent {
+    flex-grow: 0 !important;
+  }
   display: flex;
   flex-direction: column;
   justify-content: start;
-  align-items: flex-start;
+  align-items: flex start;
   min-height: 100vh;
 
   background: rgb(163, 208, 219);
