show story, and contribution, and votes

--- a/views/readStory.ejs
+++ b/views/readStory.ejs
@@ -73,38 +73,25 @@
 
 
   <div class="main-div">
-    <form class="form-inline" action="/stories" method="POST">
+    <!-- <form class="form-inline" action="/stories" method="POST"> -->
       <h1>Original Story</h1>
       <p>story summary</p>
     </div>
 
-    <div class="contribution">
+    <div class="each-story">
       <h1>Title2</h1>
       <p>story summery</p>
     </div>
 
-    <div class="each-story">
+    <div class="contributions">
       <h1>Title3</h1>
       <p>story summery</p>
+      <button class='upButton' value = "submit"> 🆙 </i> </button>
+      <button class='accept' value = "submit"> ✅ </i> </button>
+
     </div>
   </div>
 </body>
-<!-- <body>
-  <h1>TITLE VARIABLE!🥔</h1>
-  <p> *************  the initial story variable   ***************** </p>
-
-    <br>
-
-    <textarea  name="story" placeholder="Write contribution"></textarea>
-    <button>Create!</button>
-    <br>
-    <input type="submit" value="Submit">
-
-
-    <section id="contribution-container"></section>
-
-
-</body> -->
 
 </html>
 
