work in progress vote button

--- a/views/readStory.ejs
+++ b/views/readStory.ejs
@@ -73,21 +73,15 @@
 
 
   <div class="main-div">
-    <!-- <form class="form-inline" action="/stories" method="POST"> -->
-      <h1>Original Story</h1>
-      <p>story summary</p>
+      <h1>Here is a story for you:</h1>
     </div>
 
     <div class="each-story">
-      <h1>Title2</h1>
-      <p>story summery</p>
     </div>
 
     <div class="contributions">
-      <h1>Title3</h1>
-      <p>story summery</p>
-      <button class='upButton' value = "submit"> 🆙 </i> </button>
-      <button class='accept' value = "submit"> ✅ </i> </button>
+      <h1>Click <strong class="contribution-button">HERE</strong> to see contributions</h1>
+      <h3>Please Upvote the one you like:</h3>
 
     </div>
   </div>
