--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,16 +52,17 @@
               </button>
             </li>
           </ul>
-          <form class="d-flex">
+          <form id="searchStory" class="d-flex">
             <input
+              id="search"
               class="form-control me-2"
-              type="search"
               placeholder="search by genre or title"
-              aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
+            <input
+              class="btn btn-outline-success"
+              type="submit"
+              value="Submit"
+            />
           </form>
         </div>
       </div>
@@ -82,5 +83,32 @@
         <p>story summery</p>
       </div>
     </div>
+    <form class="w-25 p-3">
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+        />
+        <div id="emailHelp" class="form-text">
+          We'll never share your email with anyone else.
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+        />
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </body>
 </html>
