--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,11 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <button class="btn btn-outline-warning" type="submit">home</button>
             <li class="nav-item">
-              <button class="btn btn-outline-warning" type="submit">
+              <button
+                id="loginButton"
+                class="btn btn-outline-warning"
+                type="submit"
+              >
                 login
               </button>
             </li>
@@ -56,7 +60,7 @@
             <input
               id="search"
               class="form-control me-2"
-              placeholder="search by genre or title"
+              placeholder="search by Id ENTER A NUMBER"
             />
             <input
               class="btn btn-outline-success"
@@ -67,35 +71,6 @@
         </div>
       </div>
     </nav>
-    <div class="main-div">
-      
-    </div>
-    <form class="w-25 p-3">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-        />
-        <div id="emailHelp" class="form-text">
-          We'll never share your email with anyone else.
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-        />
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <div class="main-div"></div>
   </body>
 </html>
