--- a/views/readStory.ejs
+++ b/views/readStory.ejs
@@ -49,22 +49,10 @@
               login
             </button>
           </li>
-          <li class="nav-item">
-            <button class="btn btn-outline-warning" type="submit">
-              Register
-            </button>
-          </li>
         </ul>
         <form class="d-flex">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="search by genre or title"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">
-            Search
-          </button>
+
+
         </form>
       </div>
     </div>
@@ -77,8 +65,7 @@
       <h1>Here is a story for you:</h1>
     </div>
 
-    <div class="each-story">
-    </div>
+    <div class="each-story"></div>
 
     <div class="contributions">
       <h1>Click <strong class="contribution-button">HERE</strong> to see contributions</h1>
