--- a/views/readStory.ejs
+++ b/views/readStory.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,57 +22,42 @@
     <script src="/vendor/jquery-3.0.0.js"></script>
     <script defer src="/scripts/app.js"></script>
     <script src="/scripts/readStory.js"></script>
-
   </head>
-<body>
-  <nav class="navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Story Collector</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <button class="btn btn-outline-warning" type="submit">home</button>
-          <li class="nav-item">
-            <button class="btn btn-outline-warning" type="submit">
-              login
-            </button>
-          </li>
-        </ul>
-        <form class="d-flex">
-
-
-        </form>
+  <body>
+    <nav class="navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Story Collector</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <button class="btn btn-outline-warning" type="submit">home</button>
+            <li class="nav-item">
+              <button class="btn btn-outline-warning" type="submit">
+                login
+              </button>
+            </li>
+          </ul>
+          <form class="d-flex"></form>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-
-
-
-  <div class="main-div">
+    <div class="main-div">
       <h1>Here is a story for you:</h1>
     </div>
 
-    <div class="each-story"></div>
-
     <div class="contributions">
-      <h1>Click <strong class="contribution-button">HERE</strong> to see contributions</h1>
       <h3>Please Upvote the one you like:</h3>
-
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
-
-
