--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,16 +51,22 @@
               </button>
             </li>
             <li class="nav-item">
-              <button class="btn btn-outline-warning" type="submit">
-                Register
-              </button>
+              <!-- <button id="createButton" class="btn btn-outline-warning" type="submit">
+                creater
+              </button> -->
+
+              <a
+                href="http://localhost:8080/create"
+                class="btn btn-outline-warning"
+                >create</a
+              >
             </li>
           </ul>
           <form id="searchStory" class="d-flex">
             <input
               id="search"
               class="form-control me-2"
-              placeholder="search by Id ENTER A NUMBER"
+              placeholder="search by ID"
             />
             <input
               class="btn btn-outline-success"
