--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,11 +8,11 @@ body {
   background: rgb(163, 208, 219);
   background: linear-gradient(
     227deg,
-    rgba(163, 208, 219, 1) 0%,
-    rgba(163, 176, 219, 1) 20%,
-    rgba(163, 173, 219, 1) 34%,
-    rgba(163, 219, 208, 1) 59%,
-    rgba(163, 208, 219, 1) 74%,
-    rgba(163, 208, 219, 1) 100%
+    rgb(210, 146, 77) 0%,
+    rgb(213, 84, 14) 20%,
+    rgb(190, 42, 9) 34%,
+    rgb(207, 103, 34) 59%,
+    rgb(217, 149, 23) 74%,
+    rgb(38, 214, 52) 100%
   );
 }
