--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,14 +16,10 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <button class="btn btn-outline-warning" type="submit">home</button>
         <li class="nav-item">
-          <button class="btn btn-outline-warning" type="submit">
-            login
-          </button>
+          <button class="btn btn-outline-warning" type="submit">login</button>
         </li>
         <li class="nav-item">
-          <button class="btn btn-outline-warning" type="submit">
-            Register
-          </button>
+          <button class="btn btn-outline-warning" type="submit">create</button>
         </li>
       </ul>
       <form class="d-flex">
@@ -33,9 +29,7 @@
           placeholder="search by genre or title"
           aria-label="Search"
         />
-        <button class="btn btn-outline-success" type="submit">
-          Search
-        </button>
+        <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
   </div>
