--- a/styles/users.scss
+++ b/styles/users.scss
@@ -6,7 +6,12 @@ body {
     h1 {
       margin-top: 0;
     }
+    --animate-repeat: 2;
+    animation: rubberBand; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 1.5s;
+    /* don't forget to set a duration! */
   }
+
   .container-fluid {
     width: 100%;
     display: flex;
@@ -21,7 +26,7 @@ body {
   align-items: flex start;
   min-height: 100vh;
 
-  background: rgb(163, 208, 219);
+  background: rgb(233, 172, 18);
   background: linear-gradient(
     227deg,
     rgb(210, 146, 77) 0%,
@@ -31,4 +36,18 @@ body {
     rgb(217, 149, 23) 74%,
     rgb(38, 214, 52) 100%
   );
+  .publish:hover {
+    animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s; /* don't forget to set a duration! */
+  }
+
+  .contribution:hover {
+    animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s; /* don't forget to set a duration! */
+  }
+
+  .accept:hover {
+    animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s; /* don't forget to set a duration! */
+  }
 }
