--- a/views/readStory.ejs
+++ b/views/readStory.ejs
@@ -12,10 +12,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
     <link rel="stylesheet" href="/vendor/border-box.css" />
-    <link rel="stylesheet" href="/styles/main.css" />
+    <!-- <link rel="stylesheet" href="/styles/main.css" /> -->
     <link rel="stylesheet" href="/styles/users.css" />
     <link rel="stylesheet" href="/styles/layout.css" />
 
@@ -25,7 +29,7 @@
   </head>
   <body>
     <nav class="navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+      <div class="container-fluid" width="100% !important">
         <a class="navbar-brand" href="#">Story Collector</a>
         <button
           class="navbar-toggler"
