--- a/views/story_create.ejs
+++ b/views/story_create.ejs
@@ -22,8 +22,8 @@
   </head>
 
   <body>
-    <p id="oldentry">Previous entry here</p>
-    <button type="button" id="show">Show previous entry</button>
+    <!-- <p id="oldentry">Previous entry here</p>
+    <button type="button" id="show">Show previous entry</button> -->
     <h1>Create your story!🥔</h1>
 
     <!-- action="/create/read" method="post" -->
