--- a/styles/users.scss
+++ b/styles/users.scss
@@ -1,12 +1,14 @@
 body {
   .each-story {
     margin: 1em;
-    border-style: solid;
+    border-style: inset;
+    border-width: 3px;
+
     padding: 1em;
     h1 {
       margin-top: 0;
     }
-    --animate-repeat: 2;
+
     animation: rubberBand; /* referring directly to the animation's @keyframe declaration */
     animation-duration: 1.5s;
     /* don't forget to set a duration! */
@@ -41,12 +43,16 @@ body {
     animation-duration: 2s; /* don't forget to set a duration! */
   }
 
-  .contribution:hover {
+  .upButton:hover {
     animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
     animation-duration: 2s; /* don't forget to set a duration! */
   }
 
   .accept:hover {
+    animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s; /* don't forget to set a duration! */
+  }
+  .contri:hover {
     animation: heartBeat; /* referring directly to the animation's @keyframe declaration */
     animation-duration: 2s; /* don't forget to set a duration! */
   }
